<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img6"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputEmail"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:startIconDrawable="@drawable/email_icon"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputEmail" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPassword"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/password_icon"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputPassword"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/ForgotPassword"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="@id/InputPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/ButtonLogin"
        android:textSize="23dp"/>


    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginRight="5px"
        android:text="@string/NewAccountText"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonLogin"
        app:layout_constraintEnd_toStartOf="@+id/SignUpLink"
        />

    <TextView
        android:id="@+id/SignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/orange"
        android:text="@string/Register_link"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@+id/RegisterText"
        app:layout_constraintTop_toBottomOf="@+id/ButtonLogin"
        app:layout_constraintEnd_toEndOf="@+id/ButtonLogin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>