<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">


    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/TextSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="35dp"
        android:text="@string/TextSendEmail"
        app:layout_constraintTop_toBottomOf="@+id/imagePassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPassworfEmail"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePassword"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ButtonForgotPassword"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassworfEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/ButtonSend"
        android:textSize="23dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>